# banshee-osx

./: .gitignore  AUTHORS  Banshee.sln  HACKING  MAINTAINERS  Makefile.am  NEWS  README  autogen.sh  banshee.doap  bootstrap-bundle  configure.ac  profile-configure  release-rc
data/: addin-xml-strings.cs
data/desktop-files/: banshee.desktop.mime
extras/: README.releasing  YeOldeChangeLog  banshee-gather-debug  create-contributors-paragraph  create-release-notes  make-release  push-meego
gstreamer/: gst-package.mk
help/: Makefile.am
help/C/: TODO  add-podcast.page  add-radio.page  advanced.page  amazon.page  extensions.page  import.page  index.page  introduction.page  itunes-import.page.stub  keyboardshortcuts.page  lastfm.page  manage-coverart.page.stub  manage-playlists.page  manage-tags.page  play-queue.page  play.page  podcast.page  radio.page  rb-import.page.stub  search.page  sort.page  sync.page  ui.page
help/ca/: ca.po
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fr/: fr.po
help/hu/: hu.po
help/ja/: ja.po
help/sl/: sl.po
help/zh_CN/: zh_CN.po
libbanshee/: banshee-player-dvd.c  banshee-player-pipeline.c  banshee-player-private.h  banshee-player-vis.c  banshee-player.c  libbanshee.cproj
po/: LINGUAS  POTFILES.in  POTFILES.skip  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  fr.po  gl.po  he.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  lv.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sr@latin.po  sv.po  te.po  tr.po  uk.po  vi.po  zh_CN.po  zh_HK.po  zh_TW.po
src/Backends/: Makefile.am
src/Backends/Banshee.GStreamer/: Banshee.GStreamer.csproj
src/Backends/Banshee.GStreamer/Banshee.GStreamer/: PlayerEngine.cs
src/Backends/Banshee.GStreamerSharp/: Banshee.GStreamerSharp.addin.xml  Banshee.GStreamerSharp.csproj  Banshee.GStreamerSharp.dll.config  Makefile.am
src/Backends/Banshee.GStreamerSharp/Banshee.GStreamerSharp/: AudioCdRipper.cs  BpmDetector.cs  CddaManager.cs  DvdManager.cs  PlayerEngine.cs  Transcoder.cs  Visualization.cs
src/Backends/Banshee.Gio/Banshee.Hardware.Gio/: DeviceMediaCapabilities.cs  UsbDevice.cs
src/Backends/Banshee.Gio/Banshee.IO.Gio/: Directory.cs
src/Backends/Banshee.Gnome/Banshee.GnomeBackend/: GConfConfigurationClient.cs  GnomeScreensaverManager.cs
src/Backends/Banshee.Osx/: Banshee.Osx.addin.xml  Banshee.Osx.csproj  Makefile.am
src/Backends/Banshee.Osx/Banshee.Hardware.Osx/: CdromDevice.cs  Device.cs  DiscVolume.cs  UsbDevice.cs  UsbVolume.cs  Volume.cs
src/Backends/Banshee.Osx/Banshee.Hardware.Osx/LowLevel/: CoreFoundation.cs  CoreFoundationWrapper.cs  DiskArbitration.cs  IOKit.cs  OsxDiskArbiter.cs  OsxUsbData.cs
src/Backends/Banshee.Osx/Banshee.OsxBackend/: HardwareManager.cs  OsxFileChooserDialog.cs  OsxService.cs
src/Backends/Banshee.Osx/OsxIntegration.GtkOsxApplication/: GtkOsxApplication.cs
src/Backends/Banshee.Osx/OsxIntegration.Ige/: IgeMacMenu.cs  IgeMacMenuGroup.cs
src/Backends/Banshee.Windows/: Banshee.Windows.csproj  Makefile.am
src/Clients/Booter/: banshee.darwin.in  banshee.linux.in
src/Clients/Muinshee/: Muinshee.csproj
src/Clients/Nereid/: Nereid.csproj
src/Core/Banshee.Core/: Banshee.Core.csproj  Makefile.am
src/Core/Banshee.Services/: Banshee.Services.csproj  Makefile.am
src/Core/Banshee.ThickClient/: Banshee.ThickClient.addin.xml  Banshee.ThickClient.csproj  Makefile.am
src/Core/Banshee.WebBrowser/: Banshee.WebBrowser.csproj  Makefile.am
src/Core/Banshee.Widgets/: Banshee.Widgets.csproj
src/Dap/Banshee.Dap.AppleDevice/: Banshee.Dap.AppleDevice.csproj
src/Dap/Banshee.Dap.MassStorage/: Banshee.Dap.MassStorage.addin.xml  Banshee.Dap.MassStorage.csproj  Makefile.am
src/Extensions/: Makefile.am
src/Extensions/Banshee.AmazonMp3/: Banshee.AmazonMp3.csproj
src/Extensions/Banshee.Emusic.Store/: Banshee.Emusic.Store.csproj  Makefile.am
src/Extensions/Banshee.MeeGo/: Makefile.am
src/Extensions/Banshee.NotificationArea/: Banshee.NotificationArea.csproj
src/Extensions/Banshee.OpticalDisc/: Banshee.OpticalDisc.csproj
src/Extensions/Banshee.UPnPClient/: Banshee.UPnPClient.addin.xml  Banshee.UPnPClient.csproj  Makefile.am
src/Extensions/Banshee.UPnPClient/Banshee.UPnPClient/: UPnPContainerSource.cs  UPnPMusicSource.cs  UPnPServerSource.cs  UPnPService.cs  UPnPSource.cs  UPnPTrackInfo.cs  UPnPVideoSource.cs
src/Extensions/Banshee.YouTube/: Makefile.am
src/Libraries/Mtp/: Makefile.am  Mtp.csproj
src/Libraries/Mtp/Mtp/: File.cs  FileType.cs  Folder.cs  Track.cs
src/Libraries/MusicBrainz/: MusicBrainz.csproj
tests/: Makefile.am
tests/data/amz/: clear.amz  decrypted.amz  encrypted.amz
tests/data/playlist-data/: dos_path_nokia.m3u  entryref.asx
(+152 files in other folders)
